# learnopengl

./: CMakeLists.txt  README.md  glsl2c.py
.github/workflows/: cmake-multi-platform.yml
inc/: camera.hpp  cube.hpp  ebo.hpp  game.hpp  shader.hpp  shape.hpp  texture.hpp  vbo.hpp
inc/core/: camera.hpp  core.hpp  ebo.hpp  logger.hpp  shader.hpp  texture.hpp  time.hpp  vao.hpp  vbo.hpp
res/inc/: p_cube.hpp
res/render/primitives/: cube.frag  cube.hpp  cube.vert
src/: camera.cpp  cube.cpp  ebo.cpp  game.cpp  game.hpp  main.cpp  shader.cpp  texture.cpp  vao.cpp  vbo.cpp  visual.cpp  visual.hpp
src/core/: camera.cpp  ebo.cpp  shader.cpp  texture.cpp  vbo.cpp
